// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput renders masked as a snapshot 1`] = `
.c5 {
  position: relative;
}

.c0 {
  padding-bottom: 5px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 0;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 10px;
  line-height: initial;
}

.c1 {
  padding: 10px;
  box-shadow: none;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 10px;
  resize: none;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 1px solid #e5e5e5;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 0;
  margin-top: 5px;
  margin-bottom: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::-moz-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:hover,
.c1:focus,
.c1.focused {
  border-color: #6e1fff;
  outline: 0;
}

.c1:disabled {
  border: 2px dotted #e5e5e5;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  position: absolute;
  left: 10px;
  top: 10px;
  visibility: hidden;
  -webkit-animation: hSsjZP 0.2s linear;
  animation: hSsjZP 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
  z-index: 1;
}

.c4 {
  position: absolute;
  right: 10px;
  z-index: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="password"
      value=""
    />
    <span
      className="c4"
      onClick={[Function]}
    >
      <svg
        className="c5"
        height="18"
        onClick={[Function]}
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Action/View/Md
        </title>
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="#000"
            fillRule="nonzero"
            transform="translate(1.000000, 3.000000)"
          >
            <path
              d="M1.24869667,5.4620914 C1.1373218,5.64932065 1.14382667,5.88199751 1.26548624,6.06299904 C3.17245723,8.89988278 5.40646346,10.2857143 7.99932611,10.2857143 C10.5928102,10.2857143 12.8272789,8.89921208 14.7345474,6.06094369 C14.8558101,5.88048859 14.8626517,5.6486384 14.752249,5.46166626 C13.0384933,2.5598384 10.8078954,1.14285714 8.01017583,1.14285714 C5.2122393,1.14285714 2.97495646,2.56012332 1.24869667,5.4620914 Z M0.237631667,4.88772843 C2.1625973,1.65172138 4.7699889,0 8.01017583,0 C11.2513166,0 13.8530677,1.65275534 15.7651716,4.89043749 C16.0964091,5.45140384 16.0758859,6.14690631 15.7120998,6.68826823 C13.6031161,9.8267157 11.0215865,11.4285714 7.99932611,11.4285714 C4.97777755,11.4285714 2.39673899,9.82746374 0.288018499,6.69044965 C-0.0769779696,6.14741861 -0.0964918559,5.44941434 0.237631667,4.88772843 Z"
            />
            <path
              d="M8,8.57142857 C6.42204357,8.57142857 5.14285714,7.29224214 5.14285714,5.71428571 C5.14285714,4.13632929 6.42204357,2.85714286 8,2.85714286 C9.57795643,2.85714286 10.8571429,4.13632929 10.8571429,5.71428571 C10.8571429,7.29224214 9.57795643,8.57142857 8,8.57142857 Z M8,7.42857143 C8.94677386,7.42857143 9.71428571,6.66105957 9.71428571,5.71428571 C9.71428571,4.76751186 8.94677386,4 8,4 C7.05322614,4 6.28571429,4.76751186 6.28571429,5.71428571 C6.28571429,6.66105957 7.05322614,7.42857143 8,7.42857143 Z"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
</div>
`;

exports[`PasswordInput renders unmasked as a snapshot 1`] = `
.c6 {
  position: relative;
}

.c5 {
  vertical-align: middle;
}

.c0 {
  padding-bottom: 5px;
}

.c3 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 0;
  outline: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-transition: all 0.25s;
  transition: all 0.25s;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding: 0 10px;
  line-height: initial;
}

.c1 {
  padding: 10px;
  box-shadow: none;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 10px;
  resize: none;
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 17px;
  line-height: 1.1em;
  -webkit-font-smoothing: antialiased;
  border: 1px solid #e5e5e5;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
  margin-right: 0;
  margin-top: 5px;
  margin-bottom: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
}

.c1::-webkit-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::-moz-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:-ms-input-placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1::placeholder {
  color: #cccccc;
  text-overflow: ellipsis;
  line-height: normal;
}

.c1:hover,
.c1:focus,
.c1.focused {
  border-color: #6e1fff;
  outline: 0;
}

.c1:disabled {
  border: 2px dotted #e5e5e5;
}

.c2 {
  font-family: Unica77LLWebMedium,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  line-height: 1.4em;
  position: absolute;
  left: 10px;
  top: 10px;
  visibility: hidden;
  -webkit-animation: hSsjZP 0.2s linear;
  animation: hSsjZP 0.2s linear;
  -webkit-transition: visibility 0.2s linear;
  transition: visibility 0.2s linear;
  z-index: 1;
}

.c4 {
  position: absolute;
  right: 10px;
  z-index: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <label
      className="c2"
    />
    <input
      className="c3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
      value=""
    />
    <span
      className="c4"
      onClick={[Function]}
    >
      <svg
        className="c5 c6"
        height={20}
        onClick={[Function]}
        viewBox="0 0 12 12"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.5,6s0,0,0,.08L6.07,4.51H6A1.5,1.5,0,0,0,4.5,6Z"
          fill="#c2c2c2"
        />
        <path
          d="M3.68,6.91A2.54,2.54,0,0,1,3.5,6,2.5,2.5,0,0,1,6,3.5a2.54,2.54,0,0,1,.91.18L8.19,2.4A6.14,6.14,0,0,0,6,2,6.75,6.75,0,0,0,0,6,7.9,7.9,0,0,0,2,8.56Z"
          fill="#c2c2c2"
        />
        <path
          d="M9.57,3.14l.78-.79-.7-.7-8,8,.7.7,1-1A6.08,6.08,0,0,0,6,10a6.75,6.75,0,0,0,6-4A7.67,7.67,0,0,0,9.57,3.14ZM6,8.5a2.46,2.46,0,0,1-1.37-.42l.73-.73a1.49,1.49,0,0,0,2-2l.73-.73A2.46,2.46,0,0,1,8.5,6,2.5,2.5,0,0,1,6,8.5Z"
          fill="#c2c2c2"
        />
      </svg>
    </span>
  </div>
</div>
`;
